# coq-interact-api

./: pyproject.toml
coq_interact_api/: __init__.py
coq_interact_api_examples/simple/: __main__.py
